# DigitalAvatar

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Digital Avatar 正式方案 V13.md  Digital Avatar 正式方案 V14.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  package-lock.json  package.json  总体设计方案.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_request.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: main.py  worker.py
apps/api/app/api/v1/: agents.py  audit.py  auth.py  avatar_memories.py  avatars.py  memories.py  persona_activate.py  personas.py  router.py  tasks.py
apps/api/app/core/: config.py  deps.py  errors.py  logging.py  security.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: __init__.py  common.py
apps/api/app/services/: __init__.py  audit.py  auth.py  bootstrap.py  memories.py  personas.py  policy.py  provider.py  tasks.py
apps/web/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/docker/: .env.example  api.Dockerfile  docker-compose.yml  web.Dockerfile  worker.Dockerfile
docs/: README.md  frontend-architecture-review.md  minimax多智能体评审意见.md
docs/00-governance/: decision-log.md  document-map.md  glossary.md
docs/01-product/: functional-spec.md  non-functional-requirements.md  product-design.md  requirements.md  (+1 more)
tests/: conftest.py
(+83 files in other folders)
