[project]
name = "digital-avatar-api"
version = "0.1.0"
description = "Digital Avatar MVP API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "httpx>=0.27.2,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../../tests/unit", "../../tests/integration", "../../tests/security", "../../tests/smoke"]
